Update 'g44q5zxx3-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:cd523668a375a3a5c3f61a77a18e518cb76066ad@sha256:b189c6b0770efbe5d50c678ed86cdea1718cccc37aa5c2b8a51a81ce5ca4dedf

--- a/components/g44q5zxx3-python/overlays/development/deployment-patch.yaml
+++ b/components/g44q5zxx3-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: g44q5zxx3-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:cd523668a375a3a5c3f61a77a18e518cb76066ad@sha256:b189c6b0770efbe5d50c678ed86cdea1718cccc37aa5c2b8a51a81ce5ca4dedf
+          name: container-image
